[gd_scene load_steps=4 format=3 uid="uid://dgbe1homvwcit"]

[ext_resource type="Script" path="res://Enemies/Porcupine/Porcupine.gd" id="1_kvne4"]
[ext_resource type="Texture2D" uid="uid://dxkjqqvvg6evi" path="res://Textures/porcupineGeneric.png" id="2_h85tb"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_kcmn8"]
size = Vector2(40, 40)

[node name="Porcupine" type="Area2D"]
script = ExtResource("1_kvne4")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_h85tb")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
visible = false
shape = SubResource("RectangleShape2D_kcmn8")

[node name="VisibleOnScreenNotifier2D" type="VisibleOnScreenNotifier2D" parent="."]
visible = false
scale = Vector2(2, 2)

[connection signal="area_entered" from="." to="." method="_on_area_entered"]
[connection signal="area_exited" from="." to="." method="_on_area_exited"]
[connection signal="screen_exited" from="VisibleOnScreenNotifier2D" to="." method="_on_visible_on_screen_notifier_2d_screen_exited"]
